kubernetes/logging/promtail-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "9"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"DaemonSet","metadata":{"annotations":{},"labels":{"app":"promtail"},"name":"promtail","namespace":"logging"},"spec":{"selector":{"matchLabels":{"app":"promtail"}},"template":{"metadata":{"labels":{"app":"promtail"}},"spec":{"containers":[{"args":["-config.file=/etc/promtail/promtail.yaml"],"image":"grafana/promtail:2.9.3","name":"promtail","resources":{"limits":{"cpu":"500m","memory":"512Mi"},"requests":{"cpu":"100m","memory":"256Mi"}},"volumeMounts":[{"moun [...]
  creationTimestamp: "2025-02-25T02:16:02Z"
  generation: 9
  labels:
    app: promtail
  name: promtail
  namespace: logging
  resourceVersion: "62196"
  uid: 7ea0ecfd-e52d-40f4-ab7e-2c30874197bf
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-02-26T19:05:14-05:00"
      creationTimestamp: null
      labels:
        app: promtail
    spec:
      containers:
      - args:
        - -config.file=/etc/promtail/promtail.yaml
        image: grafana/promtail:2.9.3
        imagePullPolicy: IfNotPresent
        name: promtail
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/localtime
          name: host-time
          readOnly: true
        - mountPath: /etc/promtail
          name: config
          readOnly: true
        - mountPath: /var/lib/promtail
          name: positions
        - mountPath: /var/log
          name: varlog
          readOnly: true
        - mountPath: /var/log/containers
          name: containers
          readOnly: true
        - mountPath: /var/log/pods
          name: pods
          readOnly: false
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: promtail
      serviceAccountName: promtail
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: promtail-config
        name: config
      - hostPath:
          path: /etc/localtime
          type: File
        name: host-time
      - hostPath:
          path: /var/lib/promtail
          type: DirectoryOrCreate
        name: positions
      - hostPath:
          path: /var/log
          type: Directory
        name: varlog
      - hostPath:
          path: /var/log/containers
          type: Directory
        name: containers
      - hostPath:
          path: /var/log/pods
          type: DirectoryOrCreate
        name: pods
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
status:
  currentNumberScheduled: 1
  desiredNumberScheduled: 1
  numberAvailable: 1
  numberMisscheduled: 0
  numberReady: 1
  observedGeneration: 9
  updatedNumberScheduled: 1
