kubernetes/logging/loki.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: logging
spec:
  type: NodePort
  ports:
    - port: 3100
      name: http
      nodePort: 31200
  selector:
    app: loki
